--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "pinia": "^2.0.12",
     "vue": "^3.2.25"
   },
   "devDependencies": {
